Allow filtering of list queries
