# clinphen_service/api/swagger.yaml
@@ -25,6 +25,31 @@ paths:
           description: Internal error
           schema:
             $ref: "#/definitions/Error"
+    post:
+      operationId: clinphen_service.api.operations.get_patients_filtered
+      summary: Get a filtered list of patients
+      parameters:
+        - in: body
+          name: filters
+          description: list of filters, which get anded together
+          schema:
+            type: array
+            example: []
+            items:
+              $ref: '#/definitions/Filter'
+      responses:
+        "200":
+          description: Return patients
+          schema:
+            type: array
+            example: []
+            items:
+              $ref: '#/definitions/Patient'
+        "500":
+          description: Internal error
+          schema:
+            $ref: "#/definitions/Error"
+
 
   /patients/{patient_id}:
     get:
@@ -62,6 +87,31 @@ paths:
           description: No authorization
           schema:
             $ref: "#/definitions/Error"
+    post:
+      operationId: clinphen_service.api.operations.get_biosamples_filtered
+      summary: Get a filtered list of biosamples
+      parameters:
+        - in: body
+          name: filters
+          description: list of filters, which get anded together
+          schema:
+            type: array
+            example: []
+            items:
+              $ref: '#/definitions/Filter'
+      responses:
+        "200":
+          description: Return biosamples
+          schema:
+            type: array
+            example: []
+            items:
+              $ref: '#/definitions/Biosample'
+        "500":
+          description: Internal error
+          schema:
+            $ref: "#/definitions/Error"
+        
 
   /biosamples/{biosample_id}:
     get:
@@ -95,6 +145,30 @@ paths:
               $ref: '#/definitions/Enrollment'
         "403":
           description: No authorization
+          schema:
+            $ref: "#/definitions/Error"
+    post:
+      operationId: clinphen_service.api.operations.get_enrollments_filtered
+      summary: Get a filtered list of Enrollments
+      parameters:
+        - in: body
+          name: filters
+          description: list of filters, which get anded together
+          schema:
+            type: array
+            example: []
+            items:
+              $ref: '#/definitions/Filter'
+      responses:
+        "200":
+          description: Return patients
+          schema:
+            type: array
+            example: []
+            items:
+              $ref: '#/definitions/Enrollment'
+        "500":
+          description: Internal error
           schema:
             $ref: "#/definitions/Error"
 
@@ -149,25 +223,6 @@ paths:
               $ref: '#/definitions/Enrollment'
         "404":
           description: Patient does not exist
-          schema:
-            $ref: '#/definitions/Error'
-
-  /biosamples/{biosample_id}/patients/:
-    get:
-      operationId: clinphen_service.api.operations.get_patients_by_biosample
-      summary: Get patients for a given biosample
-      parameters:
-        - $ref: '#/parameters/biosample_id'
-      responses:
-        "200":
-          description: Return patients
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/Patient'
-            example: []
-        "404":
-          description: Biosample does not exist
           schema:
             $ref: '#/definitions/Error'
 
@@ -314,6 +369,20 @@ definitions:
       treatingCentreName:
         type: string
       treatingCentreProvince:
+        type: string
+
+  Filter:
+    type: object
+    required:
+      - field
+      - op
+      - value
+    properties:
+      field:
+        type: string
+      operator:
+        type: string
+      value:
         type: string
 
   Error:
